# StarLightERP_Backend

./: CMakeCache.txt  CMakeLists.txt  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  add_is_active_column.sql  auth_endpoints_addition.txt  build_and_test.sh  cmake_install.cmake  config.json  create_apps_table.sql  create_customer_user_table.sql  create_customers_table.sql  create_roles_tables.sql  create_super_users.sql  create_tenant_user_table.sql  create_tenants_table.sql  create_users_table.sql  migrate_customer_to_tenant.sql  recreate_roles_tables.sql  run_tenant_migrations.sh  test_config.env  update_users_table.sql
controllers/: AppsController.cc  AppsController.h  AuthController.cc  AuthController.h  CustomerController.cc  CustomerController.h  HealthController.cc  HealthController.h  JWTUtils.cc  JWTUtils.h  SecurityUtils.cc  SecurityUtils.h  TenantController.cc  TenantController.h  TenantHelper.h  TenantTestController.cc  TenantTestController.h  TestController.cc  TestController.h  UserController.cc  UserController.h
filters/: TenantMiddleware.cc  TenantMiddleware.h
test/: CMakeLists.txt  Makefile  cmake_install.cmake  setup_test_db.sh  setup_test_schema.sql  test_auth_controller.cc  test_jwt_utils.cc  test_main.cc  test_performance.cc  test_security_utils.cc  test_tenant_middleware.cc  test_user_controller.cc
